(APP.CSS) fixed expand-bug with align-self property in css; cards on portfolio now expand independently

--- a/src/App.css
+++ b/src/App.css
@@ -84,6 +84,8 @@
   background: rgba(5, 90, 140, 0.75) !important;
   box-shadow: 0px 0px 20px 0px !important;
   border-radius: 25px !important;
+  align-self: start;
+  width: 100%;
 }
 
 /* positioning of item cards in My Portfolio */
